base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: myapp
