base/backend-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/services"
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: myapp
