base/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myweb-fargate
  name: myweb
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31234
    protocol: TCP
  selector:
    app: myweb-fargate
  type: NodePort
