base/frontend-service_original.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myweb
  name: myweb
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31234
    protocol: TCP
  selector:
    app: myweb
  type: NodePort
