base/mydb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mydb
  name: mydb
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: mydb
